# spacemit-demo

./: .gitignore  README.md
examples/CV/CLIP/: README.md
examples/CV/CLIP/model/: download_model.sh
examples/CV/CLIP/python/: requirement.txt  requirements.txt  test_clip.py  utils.py
examples/CV/SAM/: README.md
examples/CV/SAM/model/: download_model.sh
examples/CV/SAM/python/: requirements.txt  test_sam.py
examples/CV/arcface/: README.md
examples/CV/arcface/model/: download_model.sh
examples/CV/arcface/python/: test_arcface.py  utils.py
examples/CV/efficientnet/: README.md
examples/CV/efficientnet/cpp/: CMakeLists.txt  efficientnet.cc  efficientnet.h  main.cc
examples/CV/efficientnet/data/: download_data.sh
examples/CV/efficientnet/model/: download_model.sh  download_quant_config.sh
examples/CV/efficientnet/python/: requirements.txt  test_efficientnet.py  utils.py
examples/CV/fcn/: README.md
examples/CV/fcn/cpp/: CMakeLists.txt  fcn.cc  fcn.h  main.cc
examples/CV/fcn/model/: download_model.sh  download_quant_config.sh
examples/CV/fcn/pyhton/: test_fcn.py  utils.py
examples/CV/fcn/python/: test_fcn.py
examples/CV/inception_v1/: README.md
examples/CV/inception_v1/cpp/: CMakeLists.txt  inception_v1.cc  inception_v1.h  main.cc
examples/CV/inception_v1/model/: download_model.sh  download_quant_config.sh
examples/CV/inception_v1/python/: test_inception_v1.py  utils.py
examples/CV/inception_v3/: README.md
examples/CV/inception_v3/cpp/: CMakeLists.txt  inception_v3.cc  inception_v3.h  main.cc
examples/CV/inception_v3/model/: download_model.sh  download_quant_config.sh
examples/CV/inception_v3/python/: requirements.txt  test_inception_v3.py  utils.py
examples/CV/mobilenet_v2/: README.md
examples/CV/mobilenet_v2/cpp/: CMakeLists.txt  main.cc  mobilenet_v2.cc  mobilenet_v2.h
examples/CV/mobilenet_v2/model/: download_model.sh  download_quant_config.sh
examples/CV/mobilenet_v2/python/: test_mobilenet_v2.py  utils.py
examples/CV/mobilesam1/: README.md
examples/CV/mobilesam1/cpp/: CMakeLists.txt  main.cc  mobilesam.cc  mobilesam.h
examples/CV/mobilesam1/data/: download_data.sh
examples/CV/mobilesam1/model/: download_model.sh
examples/CV/mobilesam1/python/: mobilesam1_onnx_infer.py  requirement.txt
examples/CV/nanotrack/: README.md
examples/CV/nanotrack/cpp/: CMakeLists.txt  NanoTracker.h  main.cc  nano_tracker.cc
examples/CV/nanotrack/model/: download_model.sh
examples/CV/ocr/: README.md
examples/CV/ocr/data/: download_data.sh
examples/CV/ocr/model/: download_model.sh
examples/CV/ocr/python/: requirements.txt  test_ocr.py  utils.py
examples/CV/resnet/: README.md
examples/CV/resnet/cpp/: CMakeLists.txt  main.cc  resnet.cc  resnet.h
examples/CV/resnet/model/: download_model.sh  download_quant_config.sh
examples/CV/resnet/python/: test_resnet.py  utils.py
examples/CV/swin-tiny_16xb64_in1k/: README.md
examples/CV/swin-tiny_16xb64_in1k/cpp/: CMakeLists.txt  main.cc  swin-tiny.cc  swin-tiny.h
examples/CV/swin-tiny_16xb64_in1k/model/: download_model.sh  download_quant_config.sh
examples/CV/swin-tiny_16xb64_in1k/python/: test_swin-tiny_16xb64_in1k.py  utils.py
examples/CV/unet/: README.md
examples/CV/unet/cpp/: CMakeLists.txt  main.cc  unet.cc  unet.h
examples/CV/unet/model/: download_model.sh  download_quant_config.sh
examples/CV/yolo-world/: README.md
examples/CV/yoloe/: README.md
examples/CV/yoloe/cpp/: CMakeLists.txt  main.cc  main.cpp  mobileclip.cpp  mobileclip.hpp  mobileclip_tokenizer.cpp  mobileclip_tokenizer.hpp  yoloe.cc  yoloe.cpp  yoloe.hpp
examples/CV/yolov11/: README.md
examples/CV/yolov5/: README.md
examples/CV/yolov5-face/: README.md
examples/CV/yolov6/: README.md
examples/CV/yolov8/: README.md
examples/CV/yolov8-obb/: README.md
examples/CV/yolov8-pose/: README.md
examples/CV/yolov8-seg/: README.md
examples/CV/yolov8-seg/cpp/: CMakeLists.txt  main.cc  yolov8-seg.cc  yolov8-seg.h
examples/CV/yolov8/cpp/: CMakeLists.txt  main.cc  yolov8.cc  yolov8.h
examples/NLP/: 01_search_device.py  02_capture_audio.py  03_asr_demo.py  04_asr_demo_db.py  05_llm_demo.py  06_asr_llm_demo.py  07_tts_demo.py  08_vision_demo.py  README.md  functions.py  requirements.txt
examples/NLP/.shaders/: 0252CF5E00697BF2.blob  43F46D0E28A7A004.blob  57B9788C475D10A1.blob  58E2C666FBA52C28.blob  6134019CAE967F77.blob  6A2DBABC7B0D7DB3.blob  6CBE340663E60077.blob  6D4A7101B94C51B0.blob  7014D6C44C0181C4.blob  7B8A2D1E90631D60.blob  7CF73A2191E22CC3.blob  9666E58626BE7DED.blob  AB2CAF4872E1A736.blob  B7F021EC6D98675A.blob  C52BD22B75F34408.blob  CC300304B3574BC7.blob  CFE4011B6F0A02B9.blob  E993E888973B60B4.blob
examples/NLP/spacemit_asr/: __init__.py  asr.py  record.py
examples/NLP/spacemit_audio/: __init__.py  record_loop.py  record_vad.py
examples/NLP/spacemit_llm/: __init__.py  func_model.py  llm_model.py  llm_vision.py
examples/NLP/spacemit_tts/: __init__.py  play.py
(+85 files in other folders)
